[tool.poetry]
name = "coverage-map"
version = "0.1.0"
description = ""
authors = ["Simon Mosonyi <simon.mosonyi@eodc.eu>"]
readme = "README.md"
packages = [{include = "coverage_map", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
psycopg2 = ">=2.9.11,<3.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
fastapi = ">=0.120.1,<0.121.0"
uvicorn = ">=0.38.0,<0.39.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
